# novel

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  webnovels.db
app/: __init__.py  database.py  depends.py  main.py  models.py
app/scraper/: base_scraper.py  libread.py  scraper_factory.py
app/static/: style.css
app/templates/: base.html  index.html  novel_detail.html  reader.html
